Started implementing DB access in PricePersistenceService. No solution to insert the same entity into multiple tables.

--- a/UnifiedStockExchange/UnifiedStockExchange.csproj
+++ b/UnifiedStockExchange/UnifiedStockExchange.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ServiceStack.OrmLite" Version="6.8.0" />
+    <PackageReference Include="ServiceStack.OrmLite.Sqlite" Version="6.8.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Domain\DataTransfer\" />
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
