--- a/UnifiedStockExchange/appsettings.json
+++ b/UnifiedStockExchange/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "App_Data/db.sqlite"
+  }
 }
