Work in progress on implementing multitable CRUD for same entity.

--- a/UnifiedStockExchange/appsettings.json
+++ b/UnifiedStockExchange/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "App_Data/db.sqlite"
+    "DefaultConnection": "App_Data/StockDataDB.sqlite"
   }
 }
