Adjusted OpenAPI generate script. Updated C# test project to use OpenAPI SDK project. Made some changes to tests.

--- a/UnifiedStockExchange.CSharp.Tests/UnifiedStockExchange.CSharp.Tests.csproj
+++ b/UnifiedStockExchange.CSharp.Tests/UnifiedStockExchange.CSharp.Tests.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="UnifiedStockExchangeSdk\**" />
-    <EmbeddedResource Remove="UnifiedStockExchangeSdk\**" />
-    <None Remove="UnifiedStockExchangeSdk\**" />
+    <Compile Remove="UnifiedStockExchange.Sdk\**" />
+    <EmbeddedResource Remove="UnifiedStockExchange.Sdk\**" />
+    <None Remove="UnifiedStockExchange.Sdk\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UnifiedStockExchange.CSharp\UnifiedStockExchange.CSharp.csproj" />
-    <ProjectReference Include="..\UnifiedStockExchangeSdk.CSharp\src\UnifiedStockExchangeSdk.CSharp\UnifiedStockExchangeSdk.CSharp.csproj" />
+    <ProjectReference Include="..\UnifiedStockExchange.Sdk.CSharp\src\UnifiedStockExchange.Sdk.CSharp\UnifiedStockExchange.Sdk.CSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
