Added and successfully tested CoinMarketCap connector. Made multiple improvements.

--- a/UnifiedStockExchange.Client.CSharp.Tests/UnifiedStockExchange.Client.CSharp.Tests.csproj
+++ b/UnifiedStockExchange.Client.CSharp.Tests/UnifiedStockExchange.Client.CSharp.Tests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnifiedStockExchange.CSharp\UnifiedStockExchange.CSharp.csproj" />
+    <ProjectReference Include="..\UnifiedStockExchange.Client.CSharp\UnifiedStockExchange.Client.CSharp.csproj" />
     <ProjectReference Include="..\UnifiedStockExchange.Sdk.CSharp\src\UnifiedStockExchange.Sdk.CSharp\UnifiedStockExchange.Sdk.CSharp.csproj" />
   </ItemGroup>
 
