Moved TableDataAccess to OrmLite.

--- a/UnifiedStockExchange/UnifiedStockExchange.csproj
+++ b/UnifiedStockExchange/UnifiedStockExchange.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\ServiceStack.OrmLite\src\ServiceStack.OrmLite.Sqlite\ServiceStack.OrmLite.Sqlite.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
