Created LazyList class. Added Post-build event to copy project output to Production area.

--- a/UnifiedStockExchange.CoinMarketCap/UnifiedStockExchange.CoinMarketCap.csproj
+++ b/UnifiedStockExchange.CoinMarketCap/UnifiedStockExchange.CoinMarketCap.csproj
@@ -27,4 +27,8 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(OutDir)&quot; D:\Production\UnifiedStockExchange.CoinMarketCap\ /S /Q /Y" />
+  </Target>
+
 </Project>
